@@ -26,6 +26,8 @@ Version 2.1.4
    - Very basic support for the Kinyarwanda language (thanks to Steven Michael
         Murphy)
    - Bugfix: Not reading the whole message (mh protocols)
+   - Cleanup: FAM error handling via exceptions
+   - Bugfix: Race condition when starting monitoring via FAM
 
 
 Version 2.1.3		2005-04-03 23:57
